Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.5.0 Alpha
-
None
-
7cab512a8a466ad66f8f8fc5e8fa734e83765f6f
Description
Using for example the module QtQuick.Controls
$ make html_docs
in qtquickcontrols/src/controls
return the errors:
qdoc: warning: Unable to parse JavaScript: "Syntax error" at line 41, column 1 qdoc: warning: Unable to parse JavaScript: "Syntax error" at line 41, column 1 qdoc: warning: Unable to parse JavaScript: "Syntax error" at line 41, column 1 qdoc: warning: Unable to parse JavaScript: "Syntax error" at line 41, column 1
It seems those errors are caused by UI.js files located under
qtquickcontrols/examples/quick/controls/gallery:
- qml
- qml/+android
- qml/+osx
- qml/+ios
which have .pragma library line 41 (would be nice to have the path to the file causing the problem in the warning output )